fix: 운동 기록과 함께 운동한 유저 간의 관계가 다대다로 잘못 설정된 오류 수정